# web-video

./: AGENTS.md  Cargo.toml  README.md
src/: components.rs  constants.rs  main.rs  setup.rs
src/systems/: egui_ui.rs  grid.rs  mod.rs  texture.rs
web/: index.html
