[package]
name = "web-video"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["free_camera"] }
bevy_egui = "0.39.1"

# GStreamer is only available for native targets, not WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gstreamer = "0.23"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

